@@ -21,6 +21,10 @@ dependencies {
 	// 메이븐 애플 로그인 플젝에서 가져온 것
 	implementation 'org.apache.httpcomponents:httpclient'
 	implementation 'com.nimbusds:nimbus-jose-jwt:3.10'
+
+	implementation "io.jsonwebtoken:jjwt:0.9.1"
+	implementation "org.bouncycastle:bcpkix-jdk15on:1.50"
+	implementation "org.apache.httpcomponents:httpclient:4.5.13"
 }
 
 tasks.named('test') {
@@ -29,6 +33,7 @@ tasks.named('test') {
 
 tasks.withType(JavaCompile){
 	options.compilerArgs.addAll([
+			"--add-exports=java.base/sun.security.provider=jdk.packager",
 			"--add-exports=java.base/sun.security.pkcs=jdk.packager",
 			"--add-exports=java.base/sun.security.util=jdk.packager",
 			"--add-exports=java.base/sun.security.x509=jdk.packager"
